		- resolve feature request raised in CPAN RT100857
		- add test to validate basic behavior
	* Fix issues within pod documentation
	* Added patch provided by sixtease@cpan.org within CPAN RT99934
		- Resolves improper !important rule handling
		- Adds test for validating proper !important rule handling
	* Update copyright to 2015 throughout project

3958	2015-05-29	Kevin Kamel <kamelkev@mailermailer.com>
	* Add support for an agent string argument for the remote fetching of documents
        * Add patch provided by Dave Gray (cpan@doesntsuck.com)
		- Adds proper headers for remote fetching of files
	* Fix issues within pod documentation

39XX	2015-11-XX	Kevin Kamel <kamelkev@mailermailer.com>
	* Update POD within Inliner.pm such that it generates more consistent documentation for CPAN/GitHub
	* Set URI flag allowing urls containing leading dots to be handled correctly
	* Extend support for foreign character sets
		- implement charset detection algorithm, roughly based off of HTML5 W3C specification
		- implement character encoding/decoding based upon detected charset
		- add tests for exercising new charset related features
		- update documentation regarding new methods to support foreign charsets
	* Add reference to contributor Dave Gray (cpan@doesntsuck.com) to contributors section
	* Add new TreeBuilder configuration method, which ensures all instances are configured identically
	* Remove all entity handling intentionally or unintentionally done, retain original state of all read chars
		- Modify configuration of all TreeBuilder instances, remove all entity decoding done during parsing
		- Modify configuration of TreeBuilder output, skip calls for entity encoding
		- strip all documentation and argument handling related to entity encoding
		- All entity encoding is now the responsibility of the caller
	* Update MANIFEST to reference all added tests/assets
	* Fix minor formatting issues within some tests/assets