@@ -157,9 +157,10 @@ AUTHOR
      Kevin Kamel <kamelkev@mailermailer.com>
 
 CONTRIBUTORS
+     Dave Gray <cpan@doesntsuck.com>
      Vivek Khera <vivek@khera.org>
      Michael Peters <wonko@cpan.org>
-     Dave Gray <cpan@doesntsuck.com>
+     Chelsea Rio <chelseario@gmail.com>
 
 LICENSE
     This module is Copyright 2015 Khera Communications, Inc. It is licensed
