@@ -211,7 +211,7 @@
 		- Adds proper headers for remote fetching of files
 	* Fix issues within pod documentation
 
-39XX	2015-11-XX	Kevin Kamel <kamelkev@mailermailer.com>
+39XX	2015-11-23	Kevin Kamel <kamelkev@mailermailer.com>
 	* Update POD within Inliner.pm such that it generates more consistent documentation for CPAN/GitHub
 	* Set URI flag allowing urls containing leading dots to be handled correctly
 	* Extend support for foreign character sets
@@ -220,6 +220,7 @@
 		- add tests for exercising new charset related features
 		- update documentation regarding new methods to support foreign charsets
 	* Add reference to contributor Dave Gray (cpan@doesntsuck.com) to contributors section
+	* Add reference to contributor Chelsea Rio (chelseario@gmail.com) to contributors section
 	* Add new TreeBuilder configuration method, which ensures all instances are configured identically
 	* Remove all entity handling intentionally or unintentionally done, retain original state of all read chars
 		- Modify configuration of all TreeBuilder instances, remove all entity decoding done during parsing
@@ -228,3 +229,4 @@
 		- All entity encoding is now the responsibility of the caller
 	* Update MANIFEST to reference all added tests/assets
 	* Fix minor formatting issues within some tests/assets
+        * Address concerns raised by CPAN RT96414, conditionally test for connectivity instead of outright failing
